.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0.5 - Unreleased
------------------

4.0.4 - 2011-02-26
------------------

- Remove useless trailing slash in 404.
  This fixes http://dev.plone.org/plone/ticket/11550
  [gotcha]

- Use correct argument order in utranslate.py script.
  This fixes http://dev.plone.org/plone/ticket/10395
  [fRiSi]

- Add missing security declarations on PropertiesTool.
  [davisagli]

- Add fallback icon for control panels with no icon, in the portlet_prefs
  portlet. This fixes http://dev.plone.org/plone/tickets/11112.
  [topherh, davisagli]

- Remove js-generated inline style from searchbox. Same CSS is in public.css.
  See http://dev.plone.org/plone/changeset/40654,
  Fixes http://dev.plone.org/plone/ticket/11186
  [msmith64]

- Fixed handling of relative links used as default pages
  This fixes http://dev.plone.org/plone/ticket/11340
  [fRiSi]

- Re-instate spinner.gif (animation), lost in the move to PNGs. The static
  spinner.png has been deprecated.
  Fixes http://dev.plone.org/plone/ticket/11504
  [mj]

4.0.3 - 2011-01-18
------------------

- Change PloneBatch class to work with actual_result_count alone instead of
  calculating the length of the provided sequence.
  [hannosch]

- Pass on batching hints to the catalog query in `getFolderContents`.
  [hannosch]

- Make role/permission settings consistent in Plone root
  http://dev.plone.org/plone/ticket/7922
  [tom_gross]

- Added some css ids on login form.
  [thomasdesvenain]

- Fixed possible Unauthorized error when registering a user when using
  the email address as login name.
  [maurits]

- Fixed errors on kss update in portal factory.
  This fixes http://dev.plone.org/plone/ticket/11311.
  [thomasdesvenain]

- In the registration tool strip the mail text before passing it